intento de arreglar el programa(inutil)